[package]
name = "wh2-luadb"
version = "0.1.0"
authors = ["Bert Guns <bertguns@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyfiledialogs = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
colored = "2"
walkdir = "2"
crossterm = "0.19.0"
csv = "1.1"
rpfm_lib = { path = "../rpfm-2.3.101/rpfm_lib" }
rpfm_error = { path = "../rpfm-2.3.101/rpfm_error" }