[package]
name = "wh2-luadb"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
colored = "2"
directories = "3.0.1"
walkdir = "2"
crossterm = "0.19.0"
csv = "1.1"
rpfm_lib = { git = "https://github.com/Frodo45127/rpfm", branch = "develop" }
rpfm_error = { git = "https://github.com/Frodo45127/rpfm", branch = "develop" }